DD-41629: change in code as per change in contract for public event p… (#200)
* DD-41629: change in code as per change in contract for public event public.listing.hearing-listed

* to address sonarcube issue

* To resolve compilation issue